# protocol

./: .gitignore  CONTEXT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROTOCOL_README.md  PUSH_TO_ROOTLESSNET.md  README.md  biome.json  package.json  tsconfig.json
.agent/rules/: legal-constraints.md
apps/web/: next.config.mjs  package.json  tailwind.config.js
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/docs/: layout.tsx  page.tsx
apps/web/src/app/docs/architecture/: page.tsx
apps/web/src/app/docs/cli-reference/: page.tsx
apps/web/src/app/docs/cryptography/: page.tsx
apps/web/src/app/docs/getting-started/: page.tsx
apps/web/src/app/docs/identity/: page.tsx
apps/web/src/app/docs/sdk-reference/: page.tsx
apps/web/src/app/faq/: page.tsx
apps/web/src/app/governance/: page.tsx
apps/web/src/app/security/: page.tsx
docs/: ARCHITECTURE.md  CONTRIBUTING.md  CRYPTO_SPEC.md  DEVELOPER_GUIDE.md  FAQ.md  GOVERNANCE.md  PROTOCOL.md  SECURITY.md
rootlessnet-tui/: .gitignore  README.md
rootlessnet-tui/python/: pyproject.toml
rootlessnet-tui/python/rootlessnet_tui/: __init__.py  app.py  core.py  main.py
rootlessnet-tui/python/tests/: __init__.py  test_core.py
rootlessnet-tui/rust/: Cargo.toml
rootlessnet-tui/rust/src/: content.rs  crypto.rs  identity.rs  lib.rs  messaging.rs
tests/protocol/: .gitignore  LICENSE  README.md  package.json  tsconfig.json
tests/protocol/.agent/rules/: bug-hunter.md  production-deployment.md  test-after-feature.md  vulnerability-detector.md
tests/protocol/docs/: CONTRIBUTING.md  DEVELOPER_GUIDE.md  FAQ.md  PROTOCOL_SPEC.md  SECURITY.md
tui_protocol/: README.md
tui_protocol/python/: README.md  pyproject.toml
tui_protocol/python/rootlessnet/: __init__.py  blockchain.py  content.py  identity.py  main.py  wordlist.py
tui_protocol/rust/: Cargo.toml
tui_protocol/rust/src/: blockchain.rs  content.rs  crypto.rs  identity.rs  lib.rs  wordlist.rs
