[project]
name = "rootlessnet-tui"
version = "2.0.0"
description = "RootlessNet - A beautiful TUI for the decentralized blockchain network protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "RootlessNet Community" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: Textual",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking",
]
keywords = ["blockchain", "decentralized", "protocol", "tui", "cryptography"]

dependencies = [
    "textual>=0.47.0",
    "rich>=13.7.0",
    "maturin>=1.4.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.scripts]
rootlessnet = "rootlessnet_tui.main:main"

[build-system]
requires = ["maturin>=1.4.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "rootlessnet_tui.rootlessnet_core"
features = ["pyo3/extension-module"]
manifest-path = "../rust/Cargo.toml"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python"]
